--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -11,6 +11,7 @@
   bottom: 0;
   box-sizing: border-box;
   z-index: -1;
+  min-height: 100vh;
   @include for-tablet-landscape-up {
     padding: 8rem 3rem 14rem 3rem;
   }
