--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -1,9 +1,16 @@
+@import '../../config/variables';
+
 .aboutBottomSection {
-    display: flex;
     margin-top: 2rem;
-    animation: translate;
+    @include for-tablet-landscape-up {
+        display: flex;
+    }
     img {
-        margin-left: auto;
+        margin-top: 2rem;
+        @include for-tablet-landscape-up {
+            margin-top: 0;
+            margin-left: auto;
+        }
     }
 }
 
