--- a/src/components/Info/Info.module.scss
+++ b/src/components/Info/Info.module.scss
@@ -1,8 +1,9 @@
 @import "../../../config/variables";
 
 .infoSection {
-  max-width: 820px;
-  padding: 0 2rem;
+  max-width: 800px;
+  padding: 0 1rem;
+  margin: 0 auto;
   @include for-tablet-landscape-up {
     padding: 0;
   }
