--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,8 +1,8 @@
 @import "../../../config/variables";
 
 .footer {
-  padding: 4rem 2rem 7rem 2rem;
-  background: url('/footer-bg.jpg');
+  padding: 4rem 1rem 7rem 1rem;
+  background: url('/footer.png');
   background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
@@ -10,7 +10,7 @@
   box-sizing: border-box;
   min-height: 100vh;
   @include for-tablet-landscape-up {
-    padding: 8rem 3rem 14rem 3rem;
+    padding: 8rem 3rem 14rem 4rem;
   }
   h3 {
     margin-bottom: 5rem;
@@ -45,7 +45,7 @@
     text-decoration: none;
     &:hover,
     &:focus {
-      color: #fff;
+      color: $brand-primary;
     }
   }
 }
