--- a/src/components/Styling/Styling.module.scss
+++ b/src/components/Styling/Styling.module.scss
@@ -1,3 +1,5 @@
+@import "../../../config/variables";
+
 .stylingSection {
     position: relative;
     margin-bottom: 9rem;
@@ -17,6 +19,9 @@
             white-space: nowrap;
             &:after {
                 filter: invert(100%);
+            }
+            &:hover {
+                color: $brand-primary;
             }
         }
     }
