added imprint page query data

--- a/src/components/Styling/Styling.module.scss
+++ b/src/components/Styling/Styling.module.scss
@@ -22,6 +22,9 @@
             }
             &:hover {
                 color: $brand-primary;
+                &:after {
+                    filter: none;
+                }
             }
         }
     }
