--- a/src/utils/style.scss
+++ b/src/utils/style.scss
@@ -133,14 +133,14 @@ h2 {
       li {
           margin-bottom: 0.5rem;
       }
-  }
-  }
-  &.about-container {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    @include for-tablet-landscape-up {
-      padding-left: 0;
-      padding-right: 0;
+    }
+    .section {
+      margin-bottom: 0;
+      &:first-child,
+      &:nth-child(2), 
+      &:nth-child(3) {
+        margin-bottom: 6rem;
+      }
     }
   }
   &.styling-container {
@@ -158,6 +158,12 @@ h2 {
     }
   }
   &.about-container {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    @include for-tablet-landscape-up {
+      padding-left: 0;
+      padding-right: 0;
+    }
     .about-bottom-section {
       position: relative;
       margin-top: 2rem;
